# bp

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: add.pl  append.pl  c.pl  comp.pl  complex.pl  cut.pl  debug.pl  debug_notes.txt  defect.pl  fact.pl  is_bigger.pl  len.pl  list.pl  qsort.pl  simple.pl  struct.pl  t.pl  unif.pl  var.pl
src/: Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/compiler/: CompilationContext.cpp  CompilationContext.hpp  Compiler.cpp  Compiler.hpp  SymbolTable.cpp  SymbolTable.hpp
src/compiler/ast/: AST.cpp  AST.hpp  BinaryOperatorNode.cpp  BinaryOperatorNode.hpp  CallNode.cpp  CallNode.hpp  ClauseNode.cpp  ClauseNode.hpp  ComplexNode.cpp  ComplexNode.hpp  ConstNode.cpp  ConstNode.hpp  CutNode.cpp  CutNode.hpp  ExpressionNode.cpp  ExpressionNode.hpp  GoalNode.hpp  IsNode.cpp  IsNode.hpp  ListNode.cpp  ListNode.hpp  Node.hpp  ProgramNode.cpp  ProgramNode.hpp  StructNode.cpp  StructNode.hpp  TermNode.cpp  TermNode.hpp  UnificationNode.cpp  UnificationNode.hpp  VarNode.cpp  VarNode.hpp
src/compiler/lexer/: Lexer.cpp  Lexer.hpp
src/compiler/parser/: Parser.cpp  Parser.hpp  SymbolTable.hpp  ebnf.txt  ll1.txt  prolog_grammar.txt
src/desugar/: Desugar.cpp  Desugar.hpp
src/interpreter/: Interpreter.cpp  Interpreter.hpp  WAMState.cpp  WAMState.hpp
src/interpreter/data_structures/: ArgumentRegisters.cpp  ArgumentRegisters.hpp  ChoicePoint.cpp  ChoicePoint.hpp  Word.cpp  Word.hpp
src/interpreter/data_structures/word/: ConstantWord.cpp  ConstantWord.hpp  ListWord.cpp  ListWord.hpp  StructurePointerWord.cpp  StructurePointerWord.hpp  StructureWord.cpp  StructureWord.hpp  VariableWord.cpp  VariableWord.hpp  Word.cpp  Word.hpp
src/interpreter/instructions/: Instruction.hpp
src/preprocessor/: Preprocessor.cpp  Preprocessor.hpp
src/wam_code/: Instruction.cpp  Instruction.hpp  WAMCode.cpp  WAMCode.hpp
src/wam_code/instruction/: AllocateInstruction.hpp  BacktrackInstruction.hpp  BranchInstruction.cpp  BranchInstruction.hpp  CallInstruction.hpp  Cut.cpp  Cut.hpp  CutInstruction.cpp  CutInstruction.hpp  GetConstantInstruction.hpp  GetListInstruction.cpp  GetListInstruction.hpp  GetStructureInstruction.hpp  GetVariableInstruction.cpp  GetVariableInstruction.hpp  Instruction.cpp  Instruction.hpp  Instructions.hpp  MarkInstruction.hpp  RetryMeElseInstruction.cpp  RetryMeElseInstruction.hpp  ReturnInstruction.cpp  ReturnInstruction.hpp
src/wam_code/instruction/get/: GetConstant.cpp  GetConstant.hpp  GetConstantInstruction.cpp  GetConstantInstruction.hpp  GetList.cpp  GetList.hpp  GetListInstruction.cpp  GetListInstruction.hpp  GetStructure.cpp  GetStructure.hpp  GetStructureInstruction.cpp  GetStructureInstruction.hpp  GetVariable.cpp  GetVariable.hpp  GetVariableInstruction.hpp
src/wam_code/instruction/indexing/: Backtrack.cpp  Backtrack.hpp  BacktrackInstruction.cpp  BacktrackInstruction.hpp  Fail.cpp  Fail.hpp  Mark.cpp  Mark.hpp  MarkInstruction.cpp  MarkInstruction.hpp  RetryMeElse.cpp  RetryMeElse.hpp  RetryMeElseInstruction.hpp
src/wam_code/instruction/procedural/: Allocate.cpp  Allocate.hpp  AllocateInstruction.cpp  AllocateInstruction.hpp  Call.cpp  Call.hpp  CallInstruction.cpp  CallInstruction.hpp  Return.cpp  Return.hpp  ReturnInstruction.hpp
src/wam_code/instruction/put/: PutConstant.cpp  PutConstant.hpp  PutConstantInstruction.cpp  PutConstantInstruction.hpp  PutList.cpp  PutList.hpp  PutListInstruction.cpp  PutListInstruction.hpp  PutStructure.cpp  PutStructure.hpp  PutStructureInstruction.cpp  PutStructureInstruction.hpp  PutVariable.cpp  PutVariable.hpp  PutVariableInstruction.cpp  PutVariableInstruction.hpp
src/wam_code/instruction/unify/: UnifyConstant.cpp  UnifyConstant.hpp  UnifyConstantInstruction.cpp  UnifyConstantInstruction.hpp  UnifyVariable.cpp  UnifyVariable.hpp  UnifyVariableInstruction.cpp  UnifyVariableInstruction.hpp
src/word/: ConstantWord.cpp  ConstantWord.hpp  ListWord.cpp  StructureWord.hpp  VariableWord.cpp  VariableWord.hpp  Word.cpp  Word.hpp
stdlib/: __arithmetic.pl  __id.pl
test/: TestSuite.hpp  main.cpp
test/compiler/lexer/: LexerTest.cpp  LexerTest.hpp
test/compiler/parser/: ParserErrorTest.cpp  ParserTest.cpp  ParserTest.hpp
test/desugar/: DesugarTest.cpp
test/interpreter/: InterpreterTest.cpp
test/preprocessor/: PreprocessorTest.cpp
